alteração-no-titulo

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="7-styles.css">
-    <title>Desafio-css</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Pagina-wide</title>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
     </header>
     <main>
 
-        <img src="./wide.png">
+        <img src="wide.png">
 
         <div>
             <h1>wide coverage location</h1>
