--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+
     <title>Pagina-wide</title>
 </head>
 
@@ -19,14 +20,17 @@
     </header>
     <main>
 
-        <img src="wide.png">
+        <img class="logo-image" src="wide-logo.png" alt="wide-logo">
 
-        <div>
+        <section>
             <h1>wide coverage location</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam laboriosam dignissimos similique est odio
                 laudantium tempora saepe fugit quasi incidunt aliquam voluptatem quod voluptate officia placeat,
                 blanditiis nobis? Exercitationem, cum.</p>
             <a class="link-learn">learn more</a>
+        </section>
+
+    </main>
 </body>
 
 </html>
